FIX: Fix readability in clubs theme UPDATE: Add dark mode rendering option

--- a/src/ui/globals/clubs.theme.scss
+++ b/src/ui/globals/clubs.theme.scss
@@ -3,12 +3,13 @@
 $theme: (
 	primary: 'dp-white',
 	primary-dark: 'dp-black',
-	accent: 'dp-black',
+	accent: 'dp-blue-grey',
 	accent-dark: 'dp-white',
 	surface: 'dp-white',
 	surface-dark: 'dp-black',
 	background: 'dp-white-200',
 	dark-background: 'dp-black-600',
+	dark-mode: 'media',
 	extend: (
 		padding: (
 			xs: 0.3rem,
@@ -16,6 +17,10 @@ $theme: (
 			md: 0.7rem,
 			lg: 1rem,
 			xl: 1.2rem,
+		),
+		stroke: (
+			default: 3px,
+			set-accent-dark: 3
 		),
 	),
 );
@@ -26,8 +31,9 @@ $button-theme: (
 		'xs',
 		'md',
 	),
-	fill: 'accent-400',
-	fill-hover: 'accent-400',
+	border-width: 'stroke',
+	fill: 'accent-600',
+	fill-hover: 'accent-200',
 	fill-active: 'accent-200',
 );
 
@@ -36,6 +42,7 @@ $form-field-theme: (
 		'lg',
 		'xl',
 	),
+	border-width: 'stroke',
 );
 
 $link-theme: (
@@ -47,13 +54,22 @@ $select-field-theme: (
 		'lg',
 		'xl',
 	),
+	border-width: 'stroke',
 );
 
 $tick-field-theme: (
 	radius: 'medium',
+	border-width: 'stroke',
 	padding: (
 		'lg',
 		'xl',
 	),
 	gap: 'lg',
+);
+
+$wallet-theme: (
+	width: auto,
+	fill: 'accent-200',
+	fill-hover: 'accent-200',
+	fill-active: 'accent-400',
 );
